change order and remove portfolio cards

--- a/page-work.hbs
+++ b/page-work.hbs
@@ -16,12 +16,80 @@
           </div>
 
           <div class="mdl-card__supporting-text">
-            <p>For a condensed version of this page and contact information, please refer to my <a target="_blank" href="../content/images/theme/page-work/JSouza-Resume.pdf">resume</a></p>
-            <p>For code samples and open source contributions, please visit <a target="_blank" href="https://github.com/jacksonsouza" > github.com/jacksonsouza</a></p>
+            <p>For a condensed version of this page and contact information, please refer to my <a target="_blank" href="../content/images/theme/page-work/JSouza-Resume.pdf">resume</a> or <a target="_blank" href="https://www.linkedin.com/in/jacksonjosephsouza/">LinkedIn</a> profile</p>
+            <p>For code samples and more back-end oriented work, please visit <a target="_blank" href="https://github.com/jacksonsouza" > github.com/jacksonsouza</a></p>
           </div>
         </article>
 
           <div class="mdl-cell--12-col card-row">
+
+            <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/avvo-1.jpeg)">
+
+                  <div class="bg-overlay">
+                  </div>
+
+                  <h2 class="mdl-card__title-text">
+                    <a target="_blank" href="http://avvo.com/">AVVO</a>
+                  </h2>
+
+                </div>
+                <div class="mdl-card__supporting-text">
+
+                 <p class="desc">A Seattle, WA company offering a "Yelp for Lawyers" product and knowledgebase for legal advice.
+                  </p>
+
+                  <h5>DATE</h5>
+                  <p>Q1 2019 - Present</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Aiding in several initiatives that increase Avvo’s overall page performance - development of a Google AMP service for increased search visibility, addressing performance tech-debt while moving existing templates to React.js and integrating continuous Google Lighthouse benchmarking to prevent new issues from being introduced.</li>
+
+                </div>
+              </article>
+            </div>
+
+
+
+            <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/hbd-1.png)">
+                    <div class="bg-overlay">
+                    </div>
+
+                    <h2 class="mdl-card__title-text">
+                      <a target="_blank" href="http://desireemayehair.com/">HAIR BY DESIREE</a>
+                    </h2>
+
+                  </div>
+              
+                <div class="mdl-card__supporting-text">
+
+                  <p class="desc"> A clean mobile-first website designed to capture high-quality client "leads" from Instagram and Yelp.
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a target="_blank" href="http://desireemayehair.com/">http://desireemayehair.com/</a><br>
+
+                  <h5>DATE</h5>
+                  <p>Q2 2019</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Design and development in HTML, CSS and JS</li>
+                  <li>Check out an older version of the site <a target="_blank" href="http://jsouza.co/content/images/sites/hbd/">here</a><br></li>
+
+                </div>
+              </article>
+            </div>
+
+
+  
+        </div>
+
+
+
+        <div class="mdl-cell--12-col card-row">
 
             <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
@@ -37,132 +105,24 @@
                 </div>
                 <div class="mdl-card__supporting-text">
 
-                 <p class="desc">A Bellevue, WA startup offering a content management platform for video and live streaming content.
+                 <p class="desc">A Bellevue, WA startup that offered a content management platform for video and live streaming content.
                   </p>
 
 
                   <h5>DATE</h5>
-                  <p>Q3 2016 - Present</p>
+                  <p>Q3 2016 - Q1 2019</p>
 
                   <h5>CONTRIBUTIONS</h5>
-                  <li>Developed web applications focused on the delivery of video and text content for Sportsrocket’s main product offering.</li>
-									<li>Implemented AWS Cloudwatch based benchmarking utilities to monitor and limit expensive resource usage.</li>
+                  <li>Developed Ruby APIs for job queueing, application performance monitoring, 3rd-party platform integration and content distribution.</li>
+									<li>Introduced serverless architecture with Node.js and AWS Lambda to process demanding throughput of DirecTV show and movie metadata.</li>
+									<li>Facilitated the sunset of Sportsrocket’s product offerings during the end of Seattle-based operations.</li>
 
 
                   <a target="_blank" href="/sportsrocket" class="read-more" href="">Read More&raquo;</a>
                 </div>
               </article>
             </div>
-
-                         <div class="port-item mdl-cell mdl-cell--6-col">
-              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/build-1.jpg)">
-                    <div class="bg-overlay">
-                    </div>
-
-                    <h2 class="mdl-card__title-text">
-                      <a target="_blank" href="/fabrication">FABRICATION</a>
-                    </h2>
-
-                  </div>
-              
-                <div class="mdl-card__supporting-text">
-
-                  <p class="desc">A collection of photos and text describing various projects that I have "made with my hands".
-                  </p>
-
-                  <h5>DATE</h5>
-                  <p>Ongoing</p>
-
-                  <h5>CONTRIBUTIONS</h5>
-                  <li>Design and fabrication of products utilizing wood, metal and electronics</li>
-
-
-                                    <a target="_blank" href="/fabrication" class="read-more" href="">Read More&raquo;</a>
-
-                  
-                </div>
-              </article>
-            </div>
-
-
-  
-        </div>
-
-
-
-        <div class="mdl-cell--12-col card-row">
-
-                    <div class="port-item mdl-cell mdl-cell--6-col">
-              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/muffet-1.jpg)">
-                    <div class="bg-overlay">
-                    </div>
-
-                    <h2 class="mdl-card__title-text">
-                      <a target="_blank" href="https://github.com/jacksonsouza/muffet">MUFFET</a>
-                    </h2>
-
-                  </div>
-              
-                <div class="mdl-card__supporting-text">
-
-                  <p class="desc">A prototype IOT device and web platform that allows you to represent numerical information on beautiful, handmade displays.
-                  </p>
-
-                  <h5>LINKS</h5>
-                  <a target="_blank" href="https://github.com/jacksonsouza/muffet">https://github.com/jacksonsouza/muffet</a><br>
-                  <a target="_blank" href="https://github.com/jacksonsouza/muffet/tree/master/server#api-documentation">API Docs</a><br>
-                  <a target="_blank" href="https://www.youtube.com/watch?v=c0vz66C4ASg">Video Demo</a><br>
-
-                  <h5>DATE</h5>
-                  <p>Q2 2017</p>
-
-                  <h5>CONTRIBUTIONS</h5>
-                  <li>Design, development and manufacture of hand-made IoT furnishing</li>
-                  <li>Creation of open-source software ecosystem (client/server web application, hardware & firmware) for product</li>
-                  
-                </div>
-              </article>
-            </div>
-
-                    <div class="port-item mdl-cell mdl-cell--6-col">
-              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/azuqua-1.jpg)">
-
-                  <div class="bg-overlay">
-                  </div>
-
-                  <h2 class="mdl-card__title-text">
-                    <a target="_blank" href="https://www.azuqua.com/">AZUQUA</a>
-                  </h2>
-
-                </div>
-                <div class="mdl-card__supporting-text">
-
-                 <p class="desc">A Seattle, WA startup offering a workflow automation engine and associated tooling used to build API integrations.
-                  </p>
-
-                  <h5>DATE</h5>
-                  <p>Q2 2015 - Q3 2016</p>
-
-                  <h5>CONTRIBUTIONS</h5>
-                  <li>Built and managed 15 of the most used integrations for Azuqua’s workflow engine</li>
-                  <li>Managed communication from industry contacts about integration with their apps in order to better meet the needs of smaller clients.</li>
-
-
-                  <a target="_blank" class="read-more" href="/azuqua">Read More&raquo;</a>
-                </div>
-              </article>
-            </div>
-                        </div>
-
-
-
-
-
-          <div class="mdl-cell--12-col card-row">
-
+            
          <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
                   <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/headless-1.png)">
@@ -194,6 +154,43 @@
               </article>
             </div>
   
+          </div>
+
+
+
+
+
+          <div class="mdl-cell--12-col card-row">
+            <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/azuqua-1.jpg)">
+
+                  <div class="bg-overlay">
+                  </div>
+
+                  <h2 class="mdl-card__title-text">
+                    <a target="_blank" href="https://www.azuqua.com/">AZUQUA</a>
+                  </h2>
+
+                </div>
+                <div class="mdl-card__supporting-text">
+
+                 <p class="desc">A Seattle, WA startup offering a workflow automation engine and associated tooling used to build API integrations.
+                  </p>
+
+                  <h5>DATE</h5>
+                  <p>Q2 2015 - Q3 2016</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Maintained 10 of the most used API integrations for Azuqua’s workflow application - Salesforce, HubSpot, JIRA, Marketo, Youtube, Dailymotion and more.</li>
+                  <li>Company acquired by Okta in Q1 2019</li>
+
+
+                  <a target="_blank" class="read-more" href="/azuqua">Read More&raquo;</a>
+                </div>
+              </article>
+            </div>
+
                       <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
                 <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/xsolla-1.png)">
@@ -211,17 +208,12 @@
                  <p class="desc">An multi-national company that "offers a wide selection of ready-made solutions to help game developers monetize their games and increase conversion".
                   </p>
 
-                  <h5>LINKS</h5>
-                  <a target="_blank" href="http://developers.xsolla.com/api.html">Xsolla API</a>
-
 
                   <h5>DATE</h5>
-                  <p>April 2014 - November 2014</p>
+                  <p>Q2 2014 - Q4 2014</p>
 
                   <h5>CONTRIBUTIONS</h5>
-                  <li>Developed targeted landing pages for prospective partners</li>
-                  <li>Rewrote documentation for the Xsolla API</li>
-                  <li>Maintained internal, multi-language Wordpress tools for international pages</li>
+                  <li>Assisted in the development of the API documentation portal and targeted landing pages.</li>
 
                   <a target="_blank" class="read-more" href="/xsolla">Read More&raquo;</a>
 
@@ -234,73 +226,6 @@
 
            
         </div>
-
-        <div class="mdl-cell--12-col card-row">
-
-                  <div class="port-item mdl-cell mdl-cell--6-col">
-              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/hbd-1.png)">
-                    <div class="bg-overlay">
-                    </div>
-
-                    <h2 class="mdl-card__title-text">
-                      <a target="_blank" href="http://jsouza.co/content/images/sites/hbd/">HAIR BY DESIREE</a>
-                    </h2>
-
-                  </div>
-              
-                <div class="mdl-card__supporting-text">
-
-                  <p class="desc"> A live-updating portfolio site for a Beverly Hills based hairstylist, heavily integrated with Instagram for ease of use.
-                  </p>
-
-                  <h5>LINKS</h5>
-                  <a target="_blank" href="http://jsouza.co/content/images/sites/hbd/">http://hairbydesiree.com/</a><br>
-
-                  <h5>DATE</h5>
-                  <p>Q3 2014</p>
-
-                  <h5>CONTRIBUTIONS</h5>
-                  <li>Development & design in HTML, CSS and JS</li>
-                  <li>Extension of the Instagram API using Instafeed.js to facilitate live content updating</li>
-
-                  <a target="_blank" class="read-more" href=""></a>
-                </div>
-              </article>
-            </div>
-            
-            <div class="port-item mdl-cell mdl-cell--6-col">
-              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
-                    <div class="bg-overlay">
-                    </div>
-
-                    <h2 class="mdl-card__title-text">
-                      <a target="_blank" href="http://jsouza.co/content/images/sites/skg/">SKILLGENIE</a>
-                    </h2>
-
-                  </div>
-              
-                <div class="mdl-card__supporting-text">
-
-                  <p class="desc">A proof-of-concept web app, landing page and pitch deck that centers on facilitating independent education via "learning analytics".
-                  </p>
-
-                  <h5>LINKS</h5>
-                  <a target="_blank" href="http://jsouza.co/content/images/sites/skg/">http://skillgenie.net/</a>
-
-                  <h5>DATE</h5>
-                  <p>Q2 2014 - Q2 2015</p>
-
-                  <h5>CONTRIBUTIONS</h5>
-                  <li>Full-stack web application development (& design) in Javascript</li>
-                  <li>Supporting research in philosophy of psychology, metacognition & cognitive science</li>
-
-                  <a target="_blank" class="read-more" href="/skillgenie">Read More&raquo;</a>
-                </div>
-              </article>
-            </div>
-          </div>
 
 
 
